--- a/promigrante/movil/www/templates/chat.html
+++ b/promigrante/movil/www/templates/chat.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Chat" class="pm-bg-green">
+<ion-view view-title="Chat" class="pm-bg-blue">
 	<ion-content>
 
 		
@@ -6,7 +6,7 @@
 			<p class="text-center" style="font-size:150px"><i class="icon ion-chatboxes"></i></p>
 			<p>Bienvenido al chat, si tienes dudas o requieres ayuda no dudes en contactarnos.</p>
 			
-			<button id="start_button" class="button button-block pm-button-green" ng-click="goTo('app.chat_conversation')"> Iniciar conversación </button>
+			<button id="start_button" class="button button-block pm-button-blue" ng-click="goTo('app.chat_conversation')"> Iniciar conversación </button>
 		
 		</div>
 	</ion-content>
