--- a/promigrante/movil/www/templates/contingency_plan.html
+++ b/promigrante/movil/www/templates/contingency_plan.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Plan familiar de contingencia">
 	<ion-content>
-<!--		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">COMPLETA TU REGISTRO</strong> </div>-->
+		<div class="bar bar-subheader pm-bar-orange static text-center"> <strong class="title">PLAN DE CONTINGENCIA</strong> </div>
 		
 		<div class="im-wrapper">
 <!--			<h4><i class="icon ion-android-people"></i> Plan de Contingencia</h4>-->
@@ -8,7 +8,7 @@
 			
 			<p>Si requieres consultar el estatus de de plan familiar de contingencia  pulsa el siguiente enlacenuevamente tu plan familiar de contingencia pulsa el botón e inmediatamente te será enviado a tu dirección de correo electrónico registrada</p>
 			<p class="text-center"><strong> El estatus de su plan familiar de contingencia es:</strong></p>
-				<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-green ion-checkmark"> COMPLETO Y ACTIVO</button>
+				<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-blue ion-checkmark"> COMPLETO Y ACTIVO</button>
 			
 			
 			
@@ -25,7 +25,7 @@
 				<button id="start_button" style="margin-top:-10px" class="button button-block button-assertive ion-close"> NO EXISTENTE INACTIVO</button>
 		
 				<p>Comunícate lo antes posible al centro de atención y reacción promigrante para que de forma rápida y sencilla integres tu plan familiar de contingencia</p>
-<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-green button-small  ion-ios-telephone"> CENTRO DE ATENCIÓN</button>
+<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-blue button-small  ion-ios-telephone"> CENTRO DE ATENCIÓN</button>
 			
 <!--
 			<h4>Preguntas de seguridad</h4>
