--- a/promigrante/movil/www/templates/contingency_plan_survey.html
+++ b/promigrante/movil/www/templates/contingency_plan_survey.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Cuestionario">
 	<ion-content>
-		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">RESPONDA LAS SIGUIENTES PREGUNTAS</strong> </div>
+		<div class="bar bar-subheader pm-bar-orange static text-center"> <strong class="title">RESPONDA LAS SIGUIENTES PREGUNTAS</strong> </div>
 		
 		<div class="im-wrapper">
 <!--			<h4><i class="icon ion-android-people"></i> Plan de Contingencia</h4>-->
