--- a/promigrante/movil/www/templates/effective_call.html
+++ b/promigrante/movil/www/templates/effective_call.html
@@ -1,11 +1,11 @@
 <ion-view view-title="Llamada efectiva">
 	<ion-content>
-		<!--<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">ProMigrante</strong> </div>-->
+		<!--<div class="bar bar-subheader pm-bar-orange static text-center"> <strong class="title">ProMigrante</strong> </div>-->
 		<div class="im-wrapper">
 			<p>Estimado Jorge Hernández. De acuerdo a la estipulación normativa XXXXX-XX, en caso de que seas detenido por autoridades migratorias, tienes derecho a realizar una llamada telefónica de 2 minutos de duración.</p>
 			<p>Si te encuentras en situación de riesgo de detención o ya en tu poceso de detención, comunícate al:</p>
 			<a href="tel:18009999999">
-				<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-green icon balanced ion-ios-telephone-outline"> 01 800 HELP (999 9999) </button>
+				<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-blue icon balanced ion-ios-telephone-outline"> 01 800 HELP (999 9999) </button>
 			</a>
 			<p>De manera inmediata, tu llamada se convierte en:</p>
 			<div class="row" style="margin-top:-30px">
