--- a/promigrante/movil/www/templates/help_support.html
+++ b/promigrante/movil/www/templates/help_support.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Contacto: dudas, quejas y sugerencias">
 	<ion-content>
-		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">¿Algunda duda, queja o aclaración?</strong> </div>
+		<div class="bar bar-subheader pm-bar-orange static text-center"> <strong class="title">¿Algunda duda, queja o aclaración?</strong> </div>
 		<div class="im-wrapper">
 			<!-- Ionic Components -->
 			<h4 class="border-top">
@@ -10,7 +10,7 @@
 			<a href="tel:18009999999">
 				<br>
 				<br>
-				<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-green icon balanced ion-ios-telephone-outline"> Llamar al Call Center </button>
+				<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-blue icon balanced ion-ios-telephone-outline"> Llamar al Call Center </button>
 				
 			</a>
 			<br>
