--- a/promigrante/movil/www/templates/intro_slider.html
+++ b/promigrante/movil/www/templates/intro_slider.html
@@ -1,32 +1,45 @@
 <ion-slides options="data.sliderOptions" slider="data.sliderDelegate">
 	<ion-slide-page>
-		<div class="box" style="background-color:#fbf9c6">
+		<div class="box">
 			<div class="im-wrapper">
-				<h4 class="text-center" style="color:#ee5923;">¿En riesgo de deportación?</h4>
-				<p class="text-center"><img style="border:none;" src="img/intro/1.png"></p>
+				<ion-nav-bar class="pm-bar-blue"> &nbsp;</ion-nav-bar>
 				
-				<p class="text-center" style="color:#ee5923;">Si te encuentras en peligro de deportación emite alertas a tus contactos seleccionados, abogado y consulado en tiempo real para obtener un seguimiento  de ayuda y si es necesario, ejecutar  tu plan de contingencia.</p>
+				<br>
+				<br>
+				<p class="text-center"><img style="border:none;" src="img/intro/1.png"></p>
+				<h4 class="text-center" style="color:#ee5923;">¿TE ENCUENTRAS EN RIESGO DE DEPORTACIÓN?</h4>
+				<p class="text-center">Con Pro<span style="color:#ee5923;">migrante</span> emites alertas en tiempo real para obtener un seguimiento de ayuda, y si es necesario, ejecutar tu plan de contingencia.</p>
 			</div>
 		</div>
 	</ion-slide-page>
 	<ion-slide-page>
-		<div class="box" style="background-color:#d4eefc">
+		<div class="box">
 			<div class="im-wrapper">
-				<h4 class="text-center" style="color:#ee5923;">Botón de Pánico</h4>
+				<ion-nav-bar class="pm-bar-blue"> &nbsp;</ion-nav-bar>
+				
+				<br>
+				<br>
+				
 				<p class="text-center"><img style="border:none;" src="img/intro/2.png"></p>
-				<p class="text-center">Envía tus coordenadas al momento de detonar el botón de pánico a tus contactos seleccionados, abogado y consulado, lo cual facilita y ahorra tiempo ante una acción de respuesta especifica.</p>
+				<h4 class="text-center" style="color:#ee5923;">DETONA EL BOTÓN DE PÁNICO</h4>
+				<p class="text-center">Envía tus coordenadas a tus contactos seleccionados, abogado y consulado; facilita y ahorra tiempo ante una acción de respuesta específica..</p>
 			</div>
 		</div>
 	</ion-slide-page>
 	<ion-slide-page>
-		<div class="box" style="background-color:#e0f0eb">
+		<div class="box">
 			<div class="im-wrapper">
-				<h4 class="text-center" style="color:#ee5923;">Contratación fácil</h4>
+				<ion-nav-bar class="pm-bar-blue"> &nbsp;</ion-nav-bar>
+				
+				<br>
+				<br>
+				
 				<p class="text-center"><img style="border:none;" src="img/intro/3.png"></p>
-				<p class="text-center" style="color:#ee5923;">Contratar te lleva 3 sencillos pasos. <br> <strong>¡No estas solo!</strong></p>
-				<button id="start_button" class="button button-block pm-button-green icon balanced" ng-click="goTo('login')"> COMENZAR </button>
+				<h4 class="text-center" style="color:#ee5923;">CONTRÁTALO</h4>
+					<p class="text-center">Contratar este servicio te toma tres sencillos pasos. Haz tu plan de contingencia.
+<br> <strong>¡No estas solo!</strong></p>
+				<button id="start_button" class="button button-block pm-button-blue icon balanced" ng-click="goTo('login')"> COMENZAR </button>
 			</div>
 		</div>
 	</ion-slide-page>
 </ion-slides>
-
