--- a/promigrante/movil/www/templates/lawyers_network.html
+++ b/promigrante/movil/www/templates/lawyers_network.html
@@ -3,7 +3,7 @@
 		<div class="im-wrapper">
 			<p>Disposición de la mejor red de abogados en temas migratorios en los Estados Unidos, que otorga una amplia oferta de servicios y una asesoría de manera personal y presencial en caso de detención.</p>
 			<p class="text-center"><strong>En caso de estar disponible en tu localidad “Personalizado” tu paquete te da derecho a una primera visita presencial.</strong> </p>
-			<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-green"> Verificar disponibilidad </button>
+			<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-blue"> Verificar disponibilidad </button>
 		</div>
 		<div class="card">
 			<div class="item item-text-wrap">
