--- a/promigrante/movil/www/templates/legal_support.html
+++ b/promigrante/movil/www/templates/legal_support.html
@@ -9,7 +9,7 @@
 		
 	</ion-content>
 	<a href="tel:18009999999">
-	<div class="bar bar-footer pm-button-green ink-dark">
+	<div class="bar bar-footer pm-button-blue ink-dark">
 		<div class="title"><i class="ion-ios-telephone"></i> Centro de Atención</div>
 	</div>
 	</a>
