--- a/promigrante/movil/www/templates/login.html
+++ b/promigrante/movil/www/templates/login.html
@@ -1,4 +1,4 @@
-<div class="im-wrapper bglogin">
+<div class="im-wrapper">
 	<br>
 	<p class="text-center"><img src="img/logo-login.png" width="210" ng-click="goTo('intro')"></p>
 	<p class="text-center"><small>Demo: 7.Abril.2017</small></p>
