--- a/promigrante/movil/www/templates/personal_info.html
+++ b/promigrante/movil/www/templates/personal_info.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Cuenta y suscripción">
 	<ion-content>
-		<!--		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">Datos de compra</strong> </div>-->
+		<!--		<div class="bar bar-subheader pm-bar-orange static text-center"> <strong class="title">Datos de compra</strong> </div>-->
 		<div class="im-wrapper">
 			<!--
 			
