--- a/promigrante/movil/www/templates/contingency_plan_edit.html
+++ b/promigrante/movil/www/templates/contingency_plan_edit.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Editar plan de contingencia">
 	<ion-content>
-		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">COMPLETE INFORMACIÓN</strong> </div>
+		<div class="bar bar-subheader pm-bar-orange static text-center"> <strong class="title">COMPLETE INFORMACIÓN</strong> </div>
 		<div class="im-wrapper">
 			<div class="list">
 				<label class="item item-input item-stacked-label bold"> <span class="input-label">Nombre completo</span>
