--- a/promigrante/movil/www/templates/help_support_old.html
+++ b/promigrante/movil/www/templates/help_support_old.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Contacto: dudas, quejas y sugerencias">
 	<ion-content>
-		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">ProMigrante</strong> </div>
+		<div class="bar bar-subheader pm-bar-orange static text-center"> <strong class="title">ProMigrante</strong> </div>
 		<div class="im-wrapper">
 			<!-- Ionic Components -->
 			<h4 class="border-top">
