--- a/promigrante/movil/www/templates/menu.html
+++ b/promigrante/movil/www/templates/menu.html
@@ -9,10 +9,10 @@
 				<button class="button button-icon button-clear ion-android-more-vertical" id="menu-popover" ng-click="popover.show($event)"></button>
 			</ion-nav-buttons>
 		</ion-nav-bar>
-		<button id="fab" class="button button-assertive button-fab button-fab-bottom-right"> <i ng-if="button_pressed"><ion-spinner icon="ripple"  class="spinner-assertive"></ion-spinner></i><i ng-if="!button_pressed" class="icon ion-ios-bell"></i> </button>
+		<button id="fab" class="button button-assertive button-fab button-fab-bottom-right"> <i ng-if="button_pressed"><ion-spinner icon="ripple"  class="spinner-assertive"></ion-spinner></i><img ng-if="!button_pressed" width="100%" src="img/assets/btn-panic-fab.png"> </button>
 		<ion-nav-view name="menuContent"></ion-nav-view>
 	</ion-side-menu-content>
-	<ion-side-menu side="left" class="pm-bg-menu">
+	<ion-side-menu side="left">
 		<ion-header-bar class="expanded"> <img src="img/avatar.jpg" class="avatar motion spin fade">
 			<div class="menu-bottom pm-menu-title"> Jorge Hernández <br> <span class="pm-menu-email text-muted">jhernandez1989@hotmail.com</span> </div>
 		</ion-header-bar>
