--- a/promigrante/movil/www/templates/panic.html
+++ b/promigrante/movil/www/templates/panic.html
@@ -1,6 +1,6 @@
 <ion-view view-title="{{(show_timer)?'Alarma activada...':'Botón de pánico'}}">
 	<ion-content>
-		<div class="bar bar-subheader pm-bar-green static text-center"> <strong class="title">{{(show_timer)?'BOTÓN DE PÁNICO ACTIVADO':'¿ESTÁS EN PROBLEMAS?'}}</strong> </div>
+		<div class="bar bar-subheader pm-bar-orange static text-center" ng-if="show_timer"> <strong class="title">{{(show_timer)?'BOTÓN DE PÁNICO ACTIVADO':'¿ESTÁS EN PROBLEMAS?'}}</strong> </div>
 		<!--
 		<div class="loader">
 			
@@ -10,15 +10,16 @@
 			</svg>
 		</div>
 -->
+		<br>
 		<div class="im-wrapper">
 			<p ng-if="!show_timer" class="text-center" ng-click="start_panic()" style="margin-top:-17px">
-				<!--				<button class="button button-assertive button-fab ink-dark button-raised " style="width:200px; height:200px;"> <i class="icon" style="width:200px; height:200px; font-size:30px">{{help_text}}</i> </button>--><img ng-if="!button_pressed" width="100%" src="img/assets/btn-panic-normal.png"> <img ng-if="button_pressed" width="100%" src="img/assets/btn-panic-pressed.png"> </p>
+				<!--				<button class="button button-assertive button-fab ink-dark button-raised " style="width:200px; height:200px;"> <i class="icon" style="width:200px; height:200px; font-size:30px">{{help_text}}</i> </button>--><img ng-if="!button_pressed" width="100%" src="img/assets/btn-panic.png"> <img ng-if="button_pressed" width="100%" src="img/assets/btn-panic-hold.png"> </p>
 			<p ng-if="!show_timer" style="margin-top:-20px;margin-bottom:7px;" class="pm-detona">{{(!button_pressed)?'DETONA EL BOTÓN':'PRESIONA PARA CANCELAR'}}</p>
 			<p ng-if="show_timer" class="text-center bold"> Estimado Jorge, se han iniciado los procesos y protocolos de atención a tu solicitud.
 				<br> </p>
 			<p ng-if="!show_timer" class="text-center pm-instructions">{{(!button_pressed)?'Envía tus coordenadas al momento o llama al Call Center para recibir ayuda inmediata.':'Se confirmará alarma en 3 segundos...'}}</p>
 			<a href="tel:18009999999">
-				<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-green icon balanced ion-ios-telephone-outline"> Llamar al Call Center </button>
+				<button id="start_button" style="margin-top:-10px" class="button button-block pm-button-blue icon balanced ion-ios-telephone-outline"> Llamar al Call Center </button>
 			</a>
 			<h4 ng-if="false" class="border-top"><i class="icon ion-information-circled"></i> Tus servicios contratados</h4>
 			<!-- Protocolo -->
