--- a/promigrante/movil/www/templates/panic.html
+++ b/promigrante/movil/www/templates/panic.html
@@ -15,12 +15,14 @@
 		
 		<br>
 		<div class="im-wrapper">
-		
+			
+			<button class="button" on-long-press="onLongPress()" on-touch-end="onTouchEnd()" prevent-click="true">Button</button>
+
 			<div class="progress-wrapper">
 				<div class="progress">
             <img width="200" src="img/assets/btn-panic-noborder.png">
         </div>
-        <div round-progress max="10" current="10" stroke="5" duration="6000" clockwise="true" color="#ef473a" rounded="false" animation="linearEase" ></div>
+        <div round-progress max="25" current="i" animation-delay="0" stroke="4" clockwise="true" color="#ef473a" rounded="false" animation="linearEase" ></div>
       </div>
 		
 			
