Test long press

--- a/promigrante/movil/www/templates/panic.html
+++ b/promigrante/movil/www/templates/panic.html
@@ -16,9 +16,8 @@
 		<br>
 		<div class="im-wrapper">
 			
-			<button class="button" on-long-press="onLongPress()" on-touch-end="onTouchEnd()" prevent-click="true">Button</button>
 
-			<div class="progress-wrapper">
+			<div class="progress-wrapper" on-long-press="onLongPress()" on-touch-end="onTouchEnd()" >
 				<div class="progress">
             <img width="200" src="img/assets/btn-panic-noborder.png">
         </div>
