--- a/promigrante/movil/www/templates/panic.html
+++ b/promigrante/movil/www/templates/panic.html
@@ -21,7 +21,7 @@
 				<div class="progress">
             <img width="200" src="img/assets/btn-panic-noborder.png">
         </div>
-        <div round-progress max="30" current="30" stroke="4" clockwise="true" color="#ef473a" rounded="false" animation="linearEase" ></div>
+        <div round-progress max="30" current="i" stroke="4" clockwise="true" color="#ef473a" rounded="false" animation="linearEase" ></div>
       </div>
 		
 			
