Se baja tiempo del long press

--- a/promigrante/movil/www/templates/panic.html
+++ b/promigrante/movil/www/templates/panic.html
@@ -17,7 +17,7 @@
 		<div class="im-wrapper">
 			
 
-			<div class="progress-wrapper" on-long-press="onLongPress()" on-touch-end="onTouchEnd()" >
+			<div class="progress-wrapper" on-long-press="onLongPress()" long-press-duration="300" on-touch-end="onTouchEnd()" >
 				<div class="progress">
             <img width="200" src="img/assets/btn-panic-noborder.png">
         </div>
