--- a/promigrante/movil/www/templates/intro_slider.html
+++ b/promigrante/movil/www/templates/intro_slider.html
@@ -2,42 +2,61 @@
 	<ion-slide-page>
 		<div class="box">
 			<div class="im-wrapper">
-				<ion-nav-bar class="pm-bar-blue"> &nbsp;</ion-nav-bar>
-				
+				<p class="text-center"><img src="img/logo-login.png" style="width:120px"></p>
+				<!--
 				<br>
 				<br>
 				<p class="text-center"><img style="border:none;" src="img/intro/1.png"></p>
-				<h4 class="text-center" style="color:#ee5923;">¿TE ENCUENTRAS EN RIESGO DE DEPORTACIÓN?</h4>
-				<p class="text-center">Con Pro<span style="color:#ee5923;">migrante</span> emites alertas en tiempo real para obtener un seguimiento de ayuda, y si es necesario, ejecutar tu plan de contingencia.</p>
+				<h4 class="text-center" style="color:#ee5923;">ACTIVA EL BOTÓN DE PÁNICO</h4>-->
 			</div>
+			<img src="img/intro-gifs/1.gif" style="margin-top:-30px; margin-bottom:-20px;">
+
+			<div class="im-wrapper">
+				<h4 class="text-center" style="color:#ee5923;">ACTIVA EL BOTÓN DE PÁNICO</h4>
+				<p class="text-center">Con <strong>Pro</strong><span style="color:#ee5923;">migrante</span> si estas en riesgo de detención iniciamos con el <strong>protocolo de seguimiento de integridad</strong> hasta por 72 hrs <strong>rastreando la ubicación</strong>, avisando a tus <strong>contactos</strong>, <strong>consulado</strong> y de ser el caso a un <strong>abogado</strong> para tu atención personal.</p>
+			</div>
+
 		</div>
 	</ion-slide-page>
 	<ion-slide-page>
 		<div class="box">
 			<div class="im-wrapper">
-				<ion-nav-bar class="pm-bar-blue"> &nbsp;</ion-nav-bar>
-				
+				<p class="text-center"><img src="img/logo-login.png" style="width:120px"></p>
+				<!--				<br>
 				<br>
-				<br>
-				
+
+
 				<p class="text-center"><img style="border:none;" src="img/intro/2.png"></p>
-				<h4 class="text-center" style="color:#ee5923;">DETONA EL BOTÓN DE PÁNICO</h4>
-				<p class="text-center">Envía tus coordenadas a tus contactos seleccionados, abogado y consulado; facilita y ahorra tiempo ante una acción de respuesta específica..</p>
+-->
+			</div>
+			<img src="img/intro-gifs/2.gif" style="margin-top:-30px; margin-bottom:-20px;">
+
+			<div class="im-wrapper">
+				<h4 class="text-center" style="color:#ee5923;">CONSIDÉRATE PROTEGIDO</h4>
+				<p class="text-center"><strong>Pro</strong><span style="color:#ee5923;">migrante</span> incluye un plan de <strong>llamadas ilimitadas</strong> que te permitirán contactarte al <strong>centro de atención y reacción</strong> para recibir <strong>orientación migratoria</strong> y en su caso integres el <strong>plan familiar de contingencia</strong> para tu tranquilidad y de los tuyos.</p>
 			</div>
 		</div>
 	</ion-slide-page>
 	<ion-slide-page>
 		<div class="box">
 			<div class="im-wrapper">
-				<ion-nav-bar class="pm-bar-blue"> &nbsp;</ion-nav-bar>
-				
-				<br>
-				<br>
-				
-				<p class="text-center"><img style="border:none;" src="img/intro/3.png"></p>
-				<h4 class="text-center" style="color:#ee5923;">CONTRÁTALO</h4>
-					<p class="text-center">Contratar este servicio te toma tres sencillos pasos. Haz tu plan de contingencia.
-<br> <strong>¡No estas solo!</strong></p>
+
+				<p class="text-center"><img src="img/logo-login.png" style="width:120px"></p>
+
+
+
+
+			</div>
+			<img src="img/intro-gifs/3.gif" style="margin-top:-30px; margin-bottom:-20px;">
+			<div class="im-wrapper">
+
+
+
+
+
+				<h4 class="text-center" style="color:#ee5923;">¡ÚNETE A <strong>PRO</strong>MIGRANTE!</h4>
+				<p class="text-center">Contratar este servicio te toma tres sencillos pasos. Haz tu plan de contingencia.
+					<br> <strong>¡No estas solo!</strong></p>
 				<button id="start_button" class="button button-block pm-button-blue icon balanced" ng-click="goTo('login')"> COMENZAR </button>
 			</div>
 		</div>
