Se arregla form

--- a/promigrante/movil/www/templates/intro_slider.html
+++ b/promigrante/movil/www/templates/intro_slider.html
@@ -54,7 +54,7 @@
 
 
 
-				<h4 class="text-center" style="color:#ee5923;">¡ÚNETE A <strong>PRO</strong>MIGRANTE!</h4>
+				<h4 class="text-center" style="color:#ee5923;">¡ÚNETE A <span style="">PRO</span>MIGRANTE!</h4>
 				<p class="text-center">Contratar este servicio te toma tres sencillos pasos. Haz tu plan de contingencia.
 					<br> <strong>¡No estas solo!</strong></p>
 				<button id="start_button" class="button button-block pm-button-blue icon balanced" ng-click="goTo('login')"> COMENZAR </button>
