Se sube slide 1

--- a/promigrante/movil/www/templates/intro_slider.html
+++ b/promigrante/movil/www/templates/intro_slider.html
@@ -9,6 +9,25 @@
 				<p class="text-center"><img style="border:none;" src="img/intro/1.png"></p>
 				<h4 class="text-center" style="color:#ee5923;">ACTIVA EL BOTÓN DE PÁNICO</h4>-->
 			</div>
+			<img src="img/intro-gifs/0.gif" style="margin-top:-30px; margin-bottom:-20px;">
+
+			<div class="im-wrapper">
+				<h4 class="text-center" style="color:#ee5923;">¿TE ENCUENTRAS EN RIESGO DE DEPORTACIÓN?</h4>
+				<p class="text-center">Con <strong>Pro</strong><span style="color:#ee5923;">migrante</span> tienes el <strong>respaldo de una empresa mexicana</strong>, que te <strong>apoya a ti mexicano</strong> y cualquier amigo latino-americano que vivan en <strong>E.U.A.</strong>.</p>
+			</div>
+
+		</div>
+	</ion-slide-page>
+	<ion-slide-page>
+		<div class="box">
+			<div class="im-wrapper">
+				<p class="text-center"><img src="img/logo-login.png" style="width:120px"></p>
+				<!--
+				<br>
+				<br>
+				<p class="text-center"><img style="border:none;" src="img/intro/1.png"></p>
+				<h4 class="text-center" style="color:#ee5923;">ACTIVA EL BOTÓN DE PÁNICO</h4>-->
+			</div>
 			<img src="img/intro-gifs/1.gif" style="margin-top:-30px; margin-bottom:-20px;">
 
 			<div class="im-wrapper">
