--- a/promigrante/movil/www/templates/menu.html
+++ b/promigrante/movil/www/templates/menu.html
@@ -18,24 +18,24 @@
 		</ion-header-bar>
 		<ion-content class="has-expanded-header">
 			<ion-list>
-				<ion-item nav-clear menu-close href="#/app/panic"><i class="icon ion-ios-bell"></i> Botón de pánico </ion-item>
-				<ion-item nav-clear menu-close href="#/app/effective_call"><i class="icon ion-ios-telephone"></i> Llamada efectiva </ion-item>
-				<ion-item nav-clear menu-close href="#/app/contingency_plan"><i class="icon ion-android-document"></i> Plan familiar de contingencia </ion-item>
-				<ion-item nav-clear menu-close href="#/app/protocol"><i class="icon ion-pull-request"></i> Protocolo de seguimiento de integridad </ion-item>
-				<ion-item nav-clear menu-close href="#/app/legal_support"><i class="icon ion-help-buoy"></i> Asesoría legal </ion-item>
-				<ion-item nav-clear menu-close href="#/app/nolimit_calls"><i class="icon ion-speakerphone"></i> Llamadas ilimitadas </ion-item>
-				<ion-item nav-clear menu-close href="#/app/lawyers_network"><i class="icon ion-ios-body"></i> Red de abogados </ion-item>
-				<ion-item nav-clear menu-close href="#/app/news_feed"><i class="icon ion-ios-paper"></i> Noticias </ion-item>
-				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-card"></i> Tu cuenta </ion-item>
+				<ion-item nav-clear menu-close href="#/app/panic"><img src="img/menu/icon_panic_button.png" width="20"> <span style="padding-bottom:40px">Botón de pánico</span> </ion-item>
+				<ion-item nav-clear menu-close href="#/app/effective_call"><img src="img/menu/icon_llamada.png" width="20"> Llamada efectiva </ion-item>
+				<ion-item nav-clear menu-close href="#/app/contingency_plan"><img src="img/menu/icon_plan.png" width="20"> Plan familiar de contingencia </ion-item>
+				<ion-item nav-clear menu-close href="#/app/protocol"><img src="img/menu/icon_protocol.png" width="20"> Protocolo de seguimiento de integridad </ion-item>
+				<ion-item nav-clear menu-close href="#/app/legal_support"><img src="img/menu/icon_legal.png" width="20"> Asesoría legal </ion-item>
+				<ion-item nav-clear menu-close href="#/app/nolimit_calls"><img src="img/menu/icon_llamadas_ilimitadas.png" width="20"> Llamadas ilimitadas </ion-item>
+				<ion-item nav-clear menu-close href="#/app/lawyers_network"><img src="img/menu/icon_red_abogados.png" width="20"> Red de abogados </ion-item>
+				<ion-item nav-clear menu-close href="#/app/news_feed"><img src="img/menu/icon_noticias.png" width="20"> Noticias </ion-item>
+				<ion-item nav-clear menu-close href="#/app/personal_info"><img src="img/menu/icon_tu_cuenta.png" width="20"> Tu cuenta </ion-item>
 <!--				<ion-item nav-clear menu-close href="#/app/chat"><i class="icon ion-chatbubbles"></i> Chat </ion-item>-->
 				
 <!--				<ion-item nav-clear menu-close href="#/app/notifications"><i class="icon ion-android-cloud-done"></i> Notificaciones </ion-item>-->
 				
 				
 				
-				<ion-item nav-clear menu-close href="#/app/help_support"><i class="icon ion-help-circled"></i> Contacto: dudas, quejas y reclamaciones. </ion-item>
+				<ion-item nav-clear menu-close href="#/app/help_support"><img src="img/menu/icon_ayuda.png" width="20"> Contacto: dudas, quejas y reclamaciones. </ion-item>
 				
-				<ion-item nav-clear menu-close href="#/login"><i class="icon ion-door"></i> Salir </ion-item>
+				<ion-item nav-clear menu-close href="#/login"><img src="img/menu/icon_salir.png" width="20"> Salir </ion-item>
 				<!--				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-exit"></i> Cerrar sesión </ion-item>-->
 				<!--
                 <ion-item nav-clear menu-close href="#/app/components">
