Optimización de alarma

--- a/promigrante/movil/www/templates/menu.html
+++ b/promigrante/movil/www/templates/menu.html
@@ -6,7 +6,7 @@
 				<button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
 			</ion-nav-buttons>
 			<ion-nav-buttons side="right">
-				<button class="button button-icon button-clear ion-android-more-vertical" id="menu-popover" ng-click="popover.show($event)"></button>
+<!--				<button class="button button-icon button-clear ion-android-more-vertical" id="menu-popover" ng-click="popover.show($event)"></button>-->
 			</ion-nav-buttons>
 		</ion-nav-bar>
 		<button id="fab" class="button button-assertive button-fab button-fab-bottom-right"> <i ng-if="button_pressed"><ion-spinner icon="ripple"  class="spinner-assertive"></ion-spinner></i><img ng-if="!button_pressed" width="100%" src="img/assets/btn-panic-fab.png"> </button>
