--- a/promigrante/movil/www/templates/panic.html
+++ b/promigrante/movil/www/templates/panic.html
@@ -3,7 +3,7 @@
 		<div class="bar bar-subheader pm-bar-orange static text-center" ng-if="show_timer"> <strong class="title">{{(show_timer)?'BOTÓN DE PÁNICO ACTIVADO':'¿ESTÁS EN PROBLEMAS?'}}</strong> </div>
 
 		<div class="im-wrapper">
-			<p class="text-center">test button</p>
+			<p class="text-center">test button 2</p>
 			<div ng-if="!show_timer" class="progress-wrapper" on-long-press="onLongPress()" long-press-duration="200" on-touch-end="onTouchEnd()">
 				<div class="progress">
 					<img width="200" src="img/assets/btn-panic-noborder.png">
