--- a/promigrante/movil/www/templates/login.html
+++ b/promigrante/movil/www/templates/login.html
@@ -1,25 +1,20 @@
 <div class="im-wrapper">
 	<br>
 	<p class="text-center"><img src="img/logo-login.png" width="210" ng-click="goTo('intro')"></p>
-<!--	<p class="text-center"><small>Demo: 11.Abril.2017</small></p>-->
-	<div class="list">
-		<label class="item item-input item-floating-label"> <span class="input-label">Usuario</span>
-			<input type="text" placeholder="Usuario / Correo electrónico"> </label>
-		<label class="item item-input item-floating-label"> <span class="input-label">Contraseña</span>
-			<input type="password" placeholder="Contraseña"> </label>
-		
-<!--
-		<div class="item item-checkbox">
-			<label class="checkbox">
-				<input type="checkbox"> </label> Acepto los términos y condiciones. </div>
-		<br />
--->
-		<button class="button button-block pm-button-orange ink" ng-click="goTo('app.panic')" data-ink-color="#9DEAFF" data-ink-opacity="1"> Entrar </button>
-	</div>
-<!--	<button class="button button-block  icon balanced" data-ink-color="#9DEAFF" data-ink-opacity="1"> Suscribirse </button>-->
+
+	<form>
+		<div class="list">
+			<label class="item item-input item-floating-label"> <span class="input-label">Usuario</span>
+			<input type="text" ng-model="account.username" placeholder="Usuario / Correo electrónico"> </label>
+			<label class="item item-input item-floating-label"> <span class="input-label">Contraseña</span>
+			<input type="password" ng-model="account.password" placeholder="Contraseña"> </label>
+
+
+			<button class="button button-block pm-button-orange ink" ng-click="sendLogin()" data-ink-color="#9DEAFF" data-ink-opacity="1"> Entrar </button>
+		</div>
+	</form>
 	
-<div  id="btnCancelAlarm" ng-click="goTo('subscribe')" class="bar bar-footer pm-button-blue ink-dark">
+	<div ng-click="goTo('subscribe')" class="bar bar-footer pm-button-blue ink-dark">
 		<div class="title">¡Prueba el servicio!</div>
 	</div>
 </div>
-	
