--- a/promigrante/movil/www/templates/subscribe.html
+++ b/promigrante/movil/www/templates/subscribe.html
@@ -2,124 +2,56 @@
 	<div class="buttons buttons-left header-item" ng-click="goTo('login')"><span class="left-buttons">
 				<button class="button button-icon button-clear ion-ios-arrow-back"></button>
 			</span></div>
-	<h1 class="title">Suscripción a ProMigrante</h1> </ion-header-bar>
+	<h1 class="title">Suscripción a ProMigrante</h1>
+</ion-header-bar>
 <ion-view view-title="Suscripción">
 	<ion-content>
 		<div class="bar bar-subheader pm-bar-orange static text-center"> <strong class="title">REGISTRE SUS DATOS</strong> </div>
 		<div class="im-wrapper">
-			<!--			<p>Para disfrutar de los beneficios de xTuFamilia registre la siguiente información.</p>-->
-			
-				<!--				<p>El paquete “x mi protección” se puede contratar de manera voluntaria desde el sitio web o la App Móvil, únicamente es necesario contar con nombre completo, teléfono celular y correo electrónico. Tú decides si pagas por medio de tarjeta de crédito/débito, PayPal o pago referenciado. Una vez autorizado el pago puedes empezar uso de todos los servicios de prevención al inmigrante.</p>-->
-<!--
-				<h4 class="border-top">
-                <i class="icon ion-profile"></i>
-                Datos de registro
-            </h4>
--->
-				<form>
-				
+
+			<form name="myForm" ng-submit="showConfirmation(myForm)" novalidate>
+
 				<div class="list">
+<!--
 					<div class="item item-avatar no-border"> <img src="img/profile-photo.jpg">
-					<p><strong>Foto de perfil</strong></p>
-					<p><em>Seleccione o capture una.</em></p>
-				</div>
+						<p><strong>Foto de perfil</strong></p>
+						<p><em>Seleccione o capture una.</em></p>
+					</div>
+-->
 					<label class="item item-input item-stacked-label" style="padding-right:10px;"> <span class="input-label">Nombre completo *</span>
-						<input type="text" style="padding: 14px;" class="pm-input" placeholder="Nombre y apellido(s)"> </label>
+						<input name="fullname" type="text" ng-model="presuscription.fullname" style="padding: 14px;" class="pm-input" placeholder="Nombre y apellido(s)" required> 
+					
+					</label>
+					
 					<label class="item item-input item-stacked-label" style="padding-right:10px;"> <span class="input-label">No. de celular *</span>
-						<input type="tel" style="padding: 14px;" class="pm-input" placeholder="+44999999999"> </label>
-					<label class="item item-input item-stacked-label" style="padding-right:10px;"> <span class="input-label">ZC habita *</span>
-						<input type="tel" style="padding: 14px;" class="pm-input" placeholder="Código postal de donde habita"> </label>
+						<input name="phone_number_1" type="tel" ng-model="presuscription.phone_number_1" ng-maxlength="13" style="padding: 14px;" class="pm-input" placeholder="+44999999999" maxlength="13" required> </label>
+					<label class="item item-input item-stacked-label" style="padding-right:10px;"> <span class="input-label">Zip code *</span>
+						<input name="zipcode" type="text" ng-model="presuscription.zipcode" ng-maxlength="5" style="padding: 14px;" class="pm-input" placeholder="Código postal de donde habita" maxlength="5" required> </label>
+					
 					<label class="item item-input item-stacked-label" style="padding-right:10px;"> <span class="input-label">Email *</span>
-						<input type="email" style="padding: 14px;" class="pm-input" placeholder="usuario@mail.com"> </label>
+						<input name="email" type="email" ng-model="presuscription.email" style="padding: 14px;" class="pm-input" placeholder="usuario@mail.com" required> </label>
+					
 					<label class="item item-input item-stacked-label" style="padding-right:10px;"> <span class="input-label">Contraseña *</span>
-						<input type="password" style="padding: 14px;" class="pm-input"> </label>
+						<input name="password" type="password" ng-model="presuscription.password" style="padding: 14px;" class="pm-input" ng-maxlength="8" placeholder="********" maxlength="8" required> </label>
 				</div>
-				
-				
-				</form>
-				
-				
-				<!--
-				<label class="item item-input item-floating-label"> <span class="input-label">Apellido</span>
-					<input type="text" placeholder="Apellidos"> </label>
-				<label class="item item-input item-floating-label"> <span class="input-label">Teléfono celular</span>
-					<input type="number" placeholder="Teléfono celular"> </label>
--->
-				<!--
-				<label class="item item-input item-select">
-					<div class="input-label"> Séxo </div>
-					<select>
-						<option>Mujer</option>
-						<option selected>Hombre</option>
-						<option>Otro</option>
-					</select>
-				</label>
--->
-				<br />
-				<!--
-				<h4 class="border-top">
-                <i class="icon ion-profile"></i>
-                Tu suscripción incluye
-            </h4>
-				<div class="list card">
-					<div class="item item-body">
-						<h2 class=" text-center">Asesoría Migratoria</h2>
-						<p class="text-center">Asesoría especializada 24/7 en diversos temas migratorios. Expertos siempre disponibles para brindarte ayuda según tus necesidades.</p>
-						<h2 class=" text-center">Red de Abogados</h2>
-						<p class="text-center">Seguimiento de los mejores abogados de Estados Unidos que brindan apoyo antes, durante y después de una detención de manera presencial.</p>
-						<h2 class=" text-center">Plan de Contingencia</h2>
-						<p class="text-center">Ante una emergencia , se activa tu plan designado para cada contacto seleccionado por medio de llamadas personalizadas para continuar tu vida aún en futuros acontecimientos difíciles</p>
-						<h2 class=" text-center">Botón de Pánico</h2>
-						<p class="text-center">Envía tus coordenadas al momento de detonar el botón de pánico a tus contactos seleccionados, abogado y consulado, lo cual facilita y ahorra tiempo ante una acción de respuesta especifica</p>
-						<h2 class=" text-center">Llamada Efectiva 1x5</h2>
-						<p class="text-center">Siempre hay alguien que te atenderá personalmente, haciendo que tu llamada ante una detención se haga efectiva a 3 contactos, abogado y consulado.</p>
-						<h2 class=" text-center">Llamadas Ilimitadas EUA-MÉX</h2>
-						<p class="text-center">Habla a México, Estado Unidos y 44 países más las veces que necesites, tus llamadas duran máximo 10 Minutos</p>
-						<h2 class=" text-center">News Feed</h2>
-						<p class="text-center">Mantenerse al día con respecto a información deseada ya no será difícil, obtén las últimas noticias en tiempo real.</p>
-					</div>
-					<div class="item tabs tabs-secondary tabs-icon-left">
-						<p>Costo mensual: <strong>$59 USD</strong></p>
-					</div>
-				</div>
--->
-				<!--
-				<div class="list card">
-					<div class="item item-body">
-						<h2 class=" text-center">Asesoría Migratoria</h2>
-						<p class=" text-center"><strong>Asesoría especializada 24/7 en diversos temas migratorios.</strong> Expertos siempre disponibles para brindarte ayuda según tus necesidades.</p>
-						<h4 class=" text-center">Red de Abogados</h4>
-						<p class=" text-center">Seguimiento de los mejores abogados de Estados Unidos que brindan apoyo antes, durante y después de una detención de manera presencial.</p>
-						<h4>Plan de Contingencia</h4>
-						<p>Ante una emergencia , se activa tu plan  designado para cada contacto seleccionado por medio de llamadas personalizadas para continuar tu vida aún en futuros acontecimientos difíciles</p>
-						<h4>Botón de Pánico</h4>
-						<p>Envía tus coordenadas al momento de detonar el botón de pánico a tus contactos seleccionados, abogado y consulado, lo cual facilita y ahorra tiempo ante una acción de respuesta especifica</p>
-						<h4>Llamada Efectiva 1x5</h4>
-						<p>Siempre hay alguien que te atenderá personalmente, haciendo que tu llamada ante una detención se haga efectiva a 3 contactos, abogado y consulado.</p>
-						<h4>Llamadas Ilimitadas EUA-MÉX</h4>
-						<p>Habla a México, Estado Unidos y 44 países más las veces que necesites, tus llamadas duran máximo 10 Minutos</p>
-					</div>
-					<div class="item tabs tabs-secondary tabs-icon-left">
-						<p>Costo mensual: <strong>$59 USD</strong></p>
-					</div>
-				</div>
--->
-<!--
-				<div class="item item-checkbox">
-					<label class="checkbox">
-						<input type="checkbox"> </label> Acepto términos y condiciones. </div>
--->
-<!--
-				<button id="start_button" class="button button-block" ng-click="goTo('payment')" ng-click="goTo('login')"> Registrar y Pagar </button>
-				
-				
-				<button id="start_button" class="button button-block" ng-click="goTo('payment')" ng-click="goTo('login')"> Registrar y Pagar </button>
-				<br>
--->
-				
+
+				<button class="button button-block pm-button-blue" type="submit">Siguiente</button>
+
+			</form>
+
+			
+			
+			
+			
+			
+			<br />
+			
+
 		</div>
 	</ion-content>
-	<div  id="btnCancelAlarm" ng-click="showConfirmation()" class="bar bar-footer pm-button-orange ink-dark">
-		<div class="title">Registrar </div>
+<!--
+	<div id="btnCancelAlarm" ng-click="showConfirmation(myForm.$valid)" class="bar bar-footer pm-button-orange ink-dark">
+		<div class="title"> Siguiente </div>
 	</div>
+-->
 </ion-view>
