--- a/promigrante/movil/www/templates/menu.html
+++ b/promigrante/movil/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus enable-menu-with-back-views="false" ng-controller="MenuCtrl">
 	<ion-side-menu-content>
 		<ion-nav-bar class="pm-bar-blue">
 			<ion-nav-back-button class="no-text"> </ion-nav-back-button>
@@ -35,7 +35,7 @@
 				
 				<ion-item nav-clear menu-close href="#/app/help_support"><img src="img/menu/icon_ayuda.png" width="22"> Servicio al Cliente</ion-item>
 				
-				<ion-item nav-clear menu-close href="#/login"><img src="img/menu/icon_salir.png" width="20"> Salir </ion-item>
+				<ion-item nav-clear menu-close ng-click="logout()"><img src="img/menu/icon_salir.png" width="20"> Salir </ion-item>
 				<!--				<ion-item nav-clear menu-close href="#/app/personal_info"><i class="icon ion-exit"></i> Cerrar sesión </ion-item>-->
 				<!--
                 <ion-item nav-clear menu-close href="#/app/components">
